# eeg-visualizer-0

./: CMakeLists.txt  license  readme.org
aux/guix/: eeg-visualizer-0.scm  lsl.scm
src/: affine.hpp  args.cpp  args.hpp  bessel.hpp  box.hpp  client-visual.cpp  client-visual.hpp  client-visualizer.cpp  client-visualizer.hpp  dsp.cpp  dsp.hpp  lerp.hpp  lsl-customized.cpp  lsl-customized.hpp  main.cpp  number-printing.cpp  number-printing.hpp  numbers-and-math.hpp  numbers.hpp  plotting.cpp  plotting.hpp  server-dummy.cpp  server-dummy.hpp  signal-handling.cpp  signal-handling.hpp
